@@ -5,35 +5,12 @@
  *  Don't forget to change the IP addresses
  */
 
-#define CONFIGURE_APPLICATION_NEEDS_CONSOLE_DRIVER
-#define CONFIGURE_APPLICATION_NEEDS_CLOCK_DRIVER
-#define CONFIGURE_RTEMS_INIT_TASKS_TABLE
-#define CONFIGURE_LIBIO_MAXIMUM_FILE_DESCRIPTORS	20
-#define CONFIGURE_USE_IMFS_AS_BASE_FILESYSTEM
-
-#define CONFIGURE_EXECUTIVE_RAM_SIZE	(512*1024)
-#define CONFIGURE_MAXIMUM_SEMAPHORES	20
-#define CONFIGURE_MAXIMUM_TASKS		20
-
-#define CONFIGURE_MICROSECONDS_PER_TICK	10000
-
-#define CONFIGURE_INIT_TASK_STACK_SIZE	(10*1024)
-#define CONFIGURE_INIT_TASK_PRIORITY	120
-#define CONFIGURE_INIT_TASK_INITIAL_MODES (RTEMS_PREEMPT | \
-                                           RTEMS_NO_TIMESLICE | \
-                                           RTEMS_NO_ASR | \
-                                           RTEMS_INTERRUPT_LEVEL(0))
-
-#define CONFIGURE_STACK_CHECKER_ENABLED
-#define CONFIGURE_INIT
-
 #include "system.h"
 #include <bsp.h>
 
 #include <errno.h>
 #include <time.h>
 
-#include <rtems/confdefs.h>
 #include <stdio.h>
 #include <rtems/rtems_bsdnet.h>
 #include <rtems/ftpd.h>
@@ -172,5 +149,30 @@ rtems_task Init(
 }
 
 
+/*
+ *  Configuration
+ */
+#define CONFIGURE_APPLICATION_NEEDS_CONSOLE_DRIVER
+#define CONFIGURE_APPLICATION_NEEDS_CLOCK_DRIVER
+#define CONFIGURE_RTEMS_INIT_TASKS_TABLE
+#define CONFIGURE_LIBIO_MAXIMUM_FILE_DESCRIPTORS	20
+#define CONFIGURE_USE_IMFS_AS_BASE_FILESYSTEM
 
+#define CONFIGURE_EXECUTIVE_RAM_SIZE	(512*1024)
+#define CONFIGURE_MAXIMUM_SEMAPHORES	20
+#define CONFIGURE_MAXIMUM_TASKS		20
+
+#define CONFIGURE_MICROSECONDS_PER_TICK	10000
+
+#define CONFIGURE_INIT_TASK_STACK_SIZE	(10*1024)
+#define CONFIGURE_INIT_TASK_PRIORITY	120
+#define CONFIGURE_INIT_TASK_INITIAL_MODES (RTEMS_PREEMPT | \
+                                           RTEMS_NO_TIMESLICE | \
+                                           RTEMS_NO_ASR | \
+                                           RTEMS_INTERRUPT_LEVEL(0))
+
+#define CONFIGURE_STACK_CHECKER_ENABLED
+#define CONFIGURE_INIT
+
+#include <rtems/confdefs.h>
 
