@@ -3,9 +3,8 @@
  *  This include file contains information that is included in every
  *  function in the test set.
  *
- *  COPYRIGHT (c) 1989-1998.
+ *  COPYRIGHT (c) 1989-2009.
  *  On-Line Applications Research Corporation (OAR).
- *  Copyright assigned to U.S. Government, 1994.
  *
  *  The license and distribution terms for this file may be
  *  found in the file LICENSE in this distribution or at
@@ -19,9 +18,5 @@
 rtems_task Init(
   rtems_task_argument argument
 );
-
-/* configuration information */
-
-#include <rtems/confdefs.h>
 
 /* end of include file */
