@@ -1,3 +1,8 @@
+2009-05-13	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* Makefile, init.c, system.h: Allow overrides from invoking
+	environment. Also move RTEMS Configuration to bottom of init.c.
+
 2009-05-12	Joel Sherrill <joel.sherrill@OARcorp.com>
 
 	* Makefile: Now build with libbsdport.
